<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="24dp"
    android:layout_height="wrap_content"
    android:id="@+id/rowLayout">

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/id"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/firstname"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txt_id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/lastname"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txt_first_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/age"
        app:layout_constraintStart_toEndOf="@+id/txt_last_name"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>